# rust_microservice

./: Cargo.toml  schema.graphql  schema.sql
client/: .eslintignore  .prettierignore  codegen.yml  graphql.schema.json  package.json  tailwind.config.js
client/components/: AppNavbar.tsx  PageEditor.tsx
client/graphql/: createPage.graphql  deletePage.graphql  getPageByTitle.graphql  giveHatenaStar.graphql  imFeelingLucky.graphql  searchPage.graphql  updatePage.graphql
client/pages/: _app.tsx  index.tsx  new_page.tsx
client/pages/pages/: [...title].tsx  search.tsx
client/src/: client.ts  hatena_star.ts
client/styles/: globals.css
server/: Cargo.toml  schema.graphql  schema.sql
server/src/: db.rs  main.rs  model.rs
server/src/model/: mutation.rs  query.rs
src/: main.rs  model.rs
src/model/: mutation.rs  query.rs
